clean up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-simulation/ifa.r
-simulation/tempCodeRunnerFile.r
-Rplots.pdf
-simulation/.RData
-simulation/.Rhistory
-simulation/*-tutorial.r
-data/gsm8k_clean.csv
-scraping/results/*
-data
+*/.RData
+*/.Rhistory
+*/tempCodeRunnerFile.r
 .Rproj.user
-analysis/models
-analysis/models_orig
-analysis/.RData
-analysis/.Rhistory
+analysis/models*
+data
