--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,19 @@
 */.RData
 */.Rhistory
 */tempCodeRunnerFile.r
-*/.DS_Store
+*.DS_Store
 .Rproj.user
-analysis/archive
-analysis/itemfits
-analysis/models*
-analysis/reduced/*png
-analysis/reduced/*rds
 *.tgz
+*_old
+analysis/archive
 analysis/cat/*
 !analysis/cat/.gitkeep
+analysis/clustering
+analysis/itemfits
+analysis/models*
 data*
 plots*
-*_old
-*.DS_Store
-analysis/clustering
 scraping/check_prompts.py
 scraping/open-llm-leaderboard-original.csv
 scraping/open-llm-leaderboard copy.csv
-scraping/open-llm-leaderboard_log.txt
-scraping/open-llm-leaderboard_log.txt.bak
+scraping/open-llm-leaderboard_log*
